--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+
+    <string name="menu_groceries">Groceries</string>
+    <string name="add_hint">Add Item</string>
+    <string name="add_text">Add</string>
+    <string name="delete_text">Delete</string>
+    <string name="clear_text">Clear</string>
 </resources>
