--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="action_settings">Settings</string>
     <string name="item_details">Item Details</string>
     <string name="store_list">Store List</string>
+    <string name="store_name_hint">Store Name</string>
+    <string name="add_store">New Store</string>
 </resources>
