--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="add_store">New Store</string>
     <string name="store_detail">Store Detail</string>
     <string name="deleted_store">Deleted store from database</string>
+    <string name="items_empty">No items saved</string>
 </resources>
