Store selector kind of working. Store Grocery Page is not responding to store selection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="look_for_items">Look for Items:</string>
     <string name="unstocked_list">Unstocked List</string>
     <string name="store_grocery_title">Grocery by Store</string>
+    <string name="no_store_selected"><![CDATA[<no store selected>]]></string>
 </resources>
