--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="ok">Ok</string>
     <string name="no_permission">Storage permission needed for this action!</string>
     <string name="data_exported">Data exported to groceryData.json file</string>
+    <string name="data_imported">Data imported</string>
 </resources>
